<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/unamaps_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobre_titulo"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_texto"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_fonte_titulo"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txtFonte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_fonte"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_bibliotecas_titulo"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txtBiliotecas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_bibliotecas"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_feedback"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobre_email"
        android:textSize="15sp"/>
</LinearLayout>