<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lixbearg.unamaps.AlarmeActivity"
    android:orientation="vertical">

    <TextView android:text="@string/alarmes_segunda" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Title"/>
    <TextView android:text="@string/alarmes_primeirohor" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Subhead"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alarmes_descricao"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>
    <TextView android:text="@string/alarmes_segundohor" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Subhead"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alarmes_descricao"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>
</LinearLayout>
